CDPD-95457 : HIVE-29077: Reduce HMS calls while adding entries into the transactionListeners while abortTxn (#5946)
(cherry picked from commit 906f61cb9972ac642fbf4ac8e01ab6be29f2df11)