@@ -114,6 +114,7 @@ import java.time.Instant;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
@@ -124,7 +125,6 @@ import java.util.concurrent.atomic.AtomicInteger;
 import java.util.function.BiPredicate;
 import java.util.stream.Collectors;
 
-import static org.apache.hadoop.hive.metastore.txn.TxnUtils.getEpochFn;
 import static org.apache.hadoop.hive.metastore.utils.MetaStoreUtils.getDefaultCatalog;
 
 /**
@@ -458,7 +458,7 @@ public abstract class TxnHandler implements TxnStore, TxnStore.MutexAPI {
     if (transactionalListeners != null) {
       //Find the write details for this transaction.
       //Doing it here before the metadata tables are updated below.
-      txnWriteDetails = getWriteIdsForTxnID(rqst.getTxnid());
+      txnWriteDetails = getWriteIdsMappingForTxns(Set.of(rqst.getTxnid()));
     }
     TxnType txnType = new AbortTxnFunction(rqst).execute(jdbcResource);
     if (txnType != null) {
@@ -472,10 +472,10 @@ public abstract class TxnHandler implements TxnStore, TxnStore.MutexAPI {
                                        List<TxnWriteDetails> txnWriteDetails, List<TransactionalMetaStoreEventListener> transactionalListeners) throws MetaException {
     List<Long> writeIds = txnWriteDetails.stream()
             .map(TxnWriteDetails::getWriteId)
-            .collect(Collectors.toList());
+            .toList();
     List<String> databases = txnWriteDetails.stream()
             .map(TxnWriteDetails::getDbName)
-            .collect(Collectors.toList());
+            .toList();
     ListenerEvent txnEvent;
     if (eventType.equals(EventMessage.EventType.ABORT_TXN)) {
       txnEvent = new AbortTxnEvent(txnId, txnType, null, databases, writeIds);
@@ -498,8 +498,10 @@ public abstract class TxnHandler implements TxnStore, TxnStore.MutexAPI {
     if (transactionalListeners != null) {
       //Find the write details for this transaction.
       //Doing it here before the metadata tables are updated below.
-      for(Long txnId : txnIds)
-        txnWriteDetailsMap.put(txnId, getWriteIdsForTxnID(txnId));
+      List<TxnWriteDetails> txnWriteDetails = getWriteIdsMappingForTxns(new HashSet<>(txnIds));
+      txnWriteDetailsMap.putAll(txnWriteDetails.stream()
+                                               .collect(Collectors.groupingBy(TxnWriteDetails::getTxnId)));
+
     }
 
     List<String> queries = new ArrayList<>();
@@ -533,8 +535,8 @@ public abstract class TxnHandler implements TxnStore, TxnStore.MutexAPI {
 
       if (transactionalListeners != null) {
         for (Long txnId : txnIds) {
-          notifyCommitOrAbortEvent(txnId,EventMessage.EventType.ABORT_TXN,
-                  nonReadOnlyTxns.getOrDefault(txnId, TxnType.READ_ONLY), dbConn, txnWriteDetailsMap.get(txnId), transactionalListeners);
+          notifyCommitOrAbortEvent(txnId, EventMessage.EventType.ABORT_TXN,
+                  nonReadOnlyTxns.getOrDefault(txnId, TxnType.READ_ONLY), dbConn, txnWriteDetailsMap.getOrDefault(txnId, new ArrayList<>()), transactionalListeners);
         }
       }
     } catch (SQLException e) {
@@ -1100,7 +1102,7 @@ public abstract class TxnHandler implements TxnStore, TxnStore.MutexAPI {
       jdbcResource.getJdbcTemplate().query("SELECT 1 FROM \"" + tableName + "\"",
           new MapSqlParameterSource(), ResultSet::next);
     } catch (DataAccessException e) {
-      LOG.debug("Catching sql exception in " + tableName + " check", e);
+        LOG.debug("Catching sql exception in {} check", tableName, e);
       if (e.getCause() instanceof SQLException) {
         if (DatabaseProduct.isTableNotExistsError(dbProduct, e)) {
           return false;
@@ -1117,21 +1119,23 @@ public abstract class TxnHandler implements TxnStore, TxnStore.MutexAPI {
   /**
    * Returns the databases and writeID updated by txnId.
    * Queries TXN_TO_WRITE_ID using txnId.
+
+  /**
+   * Returns the TxnWriteDetails updated by txnIds.
+   * Queries TXN_TO_WRITE_ID using txnIds.
    *
-   * @param txnId Transaction ID for which write IDs are requested.
-   * @throws MetaException
+   * @param txnIds Transaction IDs for which write IDs are requested.
+   * @throws MetaException throws MetaException
    */
-  public List<TxnWriteDetails> getWriteIdsForTxnID(long txnId) throws MetaException {
+  private List<TxnWriteDetails> getWriteIdsMappingForTxns(Set<Long> txnIds) throws MetaException {
     try {
       return sqlRetryHandler.executeWithRetry(
-              new SqlRetryCallProperties().withCallerId("GetWriteIdsForTxnIDHandler"),
-              () -> jdbcResource.execute(new GetWriteIdsForTxnIDHandler(txnId)));
+              new SqlRetryCallProperties().withCallerId("GetWriteIdsMappingForTxnIdsHandler"),
+              () -> jdbcResource.execute(new GetWriteIdsMappingForTxnIdsHandler(txnIds)));
     } catch (MetaException e) {
       throw e;
     } catch (TException e) {
       throw new MetaException(e.getMessage());
     }
   }
-
-
 }
